# scam-detection

./: .dockerignore  Dockerfile  README.md  model.ipynb  model.py  pyproject.toml  roadmap.md
.github/workflows/: deploy.yml  pr.yml
app/: __init__.py  config.py  embeddings.py  errors.py  explain.py  logging_utils.py  main.py  model.py  retrieval.py  schemas.py
docs/: gcp-setup.md
gateway/: openapi.yaml
roadmap/: index.md  note.md  obsolete.md
scripts/: download_model.py  ingest_corpus.py
tests/: conftest.py  test_docs.py  test_emotion.py  test_explain.py  test_health.py  test_integration.py
