[project]
name = "emotion-detection-backend"
version = "0.1.0"
description = "FastAPI service wrapping the Chinese-Emotion-Small model with an emotion-labeling endpoint"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "transformers>=4.48",
    "torch>=2.6",
    "sentencepiece>=0.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "httpx>=0.28",
    "ruff>=0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

# Linux (Docker/CI) gets the CPU-only torch wheel: ~1/4 the size of the CUDA
# build, which directly cuts image size and Cloud Run cold-start time.
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cpu", marker = "sys_platform == 'linux'" }]

[tool.pytest.ini_options]
markers = [
    "integration: loads the real model (slow, downloads ~1.1GB on first run)",
]
# Unit tests only by default; run `pytest -m integration` for the real-model test.
addopts = "-m 'not integration'"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
