[project]
name = "emotion-detection-backend"
version = "0.1.0"
description = "FastAPI service wrapping the Chinese-Emotion-Small model with an emotion-labeling endpoint"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "transformers>=4.48",
    "torch>=2.6",
    "sentencepiece>=0.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "httpx>=0.28",
    "ruff>=0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

# Linux (Docker/CI) gets the CPU-only torch wheel: ~1/4 the size of the CUDA
# build, which directly cuts image size and Cloud Run cold-start time.
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
# macOS local dev  → normal torch
# Linux Docker/CI → CPU-only torch
# Cloud Run usually dose not use GPU, so CUDA pytorch is not necessary for production
torch = [{ index = "pytorch-cpu", marker = "sys_platform == 'linux'" }]

[tool.pytest.ini_options]
# https://docs.pytest.org/en/stable/example/markers.html
markers = [
    "integration: loads the real model (slow, downloads ~1.1GB on first run)",
]
# addopts set the default operations for `pytest` command
# Unit tests only by default; run `pytest -m integration` for the real-model test.
addopts = "-m 'not integration'"

[tool.ruff]
# Ruff: python linter and formatter
# max length of single line
line-length = 100
# Tells Ruff that your project targets Python 3.12.0
target-version = "py312"

[tool.ruff.lint]
#  chooses which types of code flaws Ruff should watch out for
select = ["E", "F", "W", "I", "UP", "B"]
